--- a/exam04/package.json
+++ b/exam04/package.json
@@ -16,7 +16,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postbuild":"xcopy /y /i /e build C:\\STSWorkSpace\\Spring09_React\\src\\main\\webapp\\resources\\react"
   },
   "eslintConfig": {
     "extends": [
